--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -48,6 +48,7 @@
 <!ENTITY Ctr_tabwidthcla	"(klassisch)">
 <!ENTITY Ctr_tabminheight	"Höhe:">
 <!ENTITY Ctr_tabheightinfo	"Niedrige Werte sorgen für eine fehlerhafte Darstellung im maximierten Fenster!">
+<!ENTITY Ctr_ctrltabprev	"Tabvorschau mit 'Strg + Tab'">
 <!ENTITY Ctr_tabmaxwidth	"Maximalbreite:">
 <!ENTITY Ctr_tabminwidth	"Minimalbreite:">
 <!ENTITY Ctr_tabwidthinfo	"Die Minimal- und Maximalbreite von Tabs wird von 'Tab Mix Plus' kontrolliert.">
@@ -149,7 +150,9 @@
 <!ENTITY Ctr_navlargeicons	"Große Symbole">
 <!ENTITY Ctr_nbisizedelay0	"Ausführungsverzögerung beim Start">
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 Sekunde)">
-<!ENTITY Ctr_findbar		"Position der Suchleiste">
+<!ENTITY Ctr_findbar		"Suchleiste">
+<!ENTITY Ctr_findbar_hws	"Suchleiste schließen sobald auf der Seite navigiert wird">
+<!ENTITY Ctr_findbarpos		"Position der Suchleiste">
 <!ENTITY Ctr_findbar_def	"Unten (Standard)">
 <!ENTITY Ctr_findbar_top	"Oben">
 <!ENTITY Ctr_findbar_topa	"Oben (alternative Reihenfolge)">
@@ -175,6 +178,7 @@
 <!ENTITY Ctr_osearch_dm		"Kleinere Aufklapp-Schaltfläche">
 <!ENTITY Ctr_addonmanager	"Add-ons-Manager">
 <!ENTITY Ctr_alt_addonsp	"'Mehr Details'-Seite: Alternative Anordnung">
+<!ENTITY Ctr_am_showrecup	"'Zuletzt durchgeführte Updates' immer anzeigen">
 <!ENTITY Ctr_alt_addonsm	"Alternative Darstellung">
 <!ENTITY Ctr_am_nowarning	"Add-on-Übersicht: Warnungen ausblenden">
 <!ENTITY Ctr_am_compact		"Add-on-Übersicht: Kompakte Darstellung">
@@ -188,6 +192,7 @@
 <!ENTITY Ctr_hiderecentbm	"Lesezeichen-Pop-up: zuletzt hinzugefügte Lesezeichen verstecken">
 <!ENTITY Ctr_hideeditbm		"Lesezeichen-Stern: Pop-up verstecken (wenn Seite noch kein Lesezeichen ist)">
 <!ENTITY Ctr_oldplacesbut	"Lesezeichen-Schaltflächen: Alte Darstellung">
+<!ENTITY Ctr_dl_pm_drop		"Download-Panel: Aufklappmenüschaltfläche anzeigen">
 <!ENTITY Ctr_bmbutpanelm	"Aufklappmenü: 'Panel'-Darstellung">
 <!ENTITY Ctr_bmbunsortbm	"Aufklappmenü: 'Weitere Lesezeichen'-Menü anzeigen">
 <!ENTITY Ctr_bmbunsortbm2	"Menü über den Lesezeichen">
@@ -237,6 +242,7 @@
 <!ENTITY Ctr_italic			"Kursiv">
 <!ENTITY Ctr_underlined		"Unterstrichen">
 <!ENTITY Ctr_notabhov		"Aktivierte Einstellungen ersetzen 'Hover-Einstellungen'">
+<!ENTITY Ctr_tablowopa		"Sichtbarkeit reduzieren">
 <!ENTITY Ctr_tabc_act_tb	"Tab-Hintergrundfarbe auf Leisten">
 
 <!ENTITY Ctr_urlbar			"Adressleiste">
