--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -48,6 +48,7 @@
 <!ENTITY Ctr_tabwidthcla	"(classic)">
 <!ENTITY Ctr_tabminheight	"Height:">
 <!ENTITY Ctr_tabheightinfo	"Low height values will cause glitches in maximized mode!">
+<!ENTITY Ctr_ctrltabprev	"Preview tabs using 'Ctrl + Tab'">
 <!ENTITY Ctr_tabmaxwidth	"Max-width:">
 <!ENTITY Ctr_tabminwidth	"Min-width:">
 <!ENTITY Ctr_tabwidthinfo	"Tab width is controlled by TabMixPlus">
@@ -149,7 +150,9 @@
 <!ENTITY Ctr_navlargeicons	"Large icons">
 <!ENTITY Ctr_nbisizedelay0	"Initialization delay on browser startup">
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sec)">
-<!ENTITY Ctr_findbar		"Findbar position">
+<!ENTITY Ctr_findbar		"Findbar">
+<!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
+<!ENTITY Ctr_findbarpos		"Findbar position">
 <!ENTITY Ctr_findbar_def	"Bottom (default)">
 <!ENTITY Ctr_findbar_top	"Top">
 <!ENTITY Ctr_findbar_topa	"Top (alternative content order)">
@@ -175,6 +178,7 @@
 <!ENTITY Ctr_osearch_dm		"Small dropmarker">
 <!ENTITY Ctr_addonmanager	"Add-on manager">
 <!ENTITY Ctr_alt_addonsp	"'More info' page: alternative order">
+<!ENTITY Ctr_am_showrecup	"Always show 'Recent updates' category">
 <!ENTITY Ctr_alt_addonsm	"Alternative appearance">
 <!ENTITY Ctr_am_nowarning	"Add-on lists: hide warnings">
 <!ENTITY Ctr_am_compact		"Add-on lists: compact view">
@@ -188,6 +192,7 @@
 <!ENTITY Ctr_hiderecentbm	"Bookmarks popup: hide recently added bookmarks">
 <!ENTITY Ctr_hideeditbm		"Bookmarks star: hide popup (if page is not bookmarked)">
 <!ENTITY Ctr_oldplacesbut	"Bookmark items and folders on toolbar: old appearance">
+<!ENTITY Ctr_dl_pm_drop		"Download buttons panel: show dropmarker">
 <!ENTITY Ctr_bmbutpanelm	"Popup: panel menu appearance">
 <!ENTITY Ctr_bmbunsortbm	"Popup: 'Other Bookmarks' menu">
 <!ENTITY Ctr_bmbunsortbm2	"Menu above bookmarks">
@@ -237,6 +242,7 @@
 <!ENTITY Ctr_italic			"Italic">
 <!ENTITY Ctr_underlined		"Underlined">
 <!ENTITY Ctr_notabhov		"Enabled settings override 'hovered' settings">
+<!ENTITY Ctr_tablowopa		"Reduce tab visibility">
 <!ENTITY Ctr_tabc_act_tb	"Background color on toolbars">
 
 <!ENTITY Ctr_urlbar			"Location bar">
