--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -48,6 +48,7 @@
 <!ENTITY Ctr_tabwidthcla	"(clásico)">
 <!ENTITY Ctr_tabminheight	"Altura:">
 <!ENTITY Ctr_tabheightinfo	"¡Valores de altura bajos causarán problemas en modo maximizado!">
+<!ENTITY Ctr_ctrltabprev	"Preview tabs using 'Ctrl + Tab'">
 <!ENTITY Ctr_tabmaxwidth	"Ancho-máximo:">
 <!ENTITY Ctr_tabminwidth	"Ancho-mínimo:">
 <!ENTITY Ctr_tabwidthinfo	"La anchura de la pestaña está controlada por TabMixPlus">
@@ -149,7 +150,9 @@
 <!ENTITY Ctr_navlargeicons	"Iconos grandes">
 <!ENTITY Ctr_nbisizedelay0	"Retardo de la activación al inicio">
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 seg)">
-<!ENTITY Ctr_findbar		"Posición en la ventana de la barra de herramientas de búsqueda">
+<!ENTITY Ctr_findbar		"Findbar">
+<!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
+<!ENTITY Ctr_findbarpos		"Posición en la ventana de la barra de herramientas de búsqueda">
 <!ENTITY Ctr_findbar_def	"Abajo (predeterminada)">
 <!ENTITY Ctr_findbar_top	"Arriba">
 <!ENTITY Ctr_findbar_topa	"Arriba (alternativa)">
@@ -175,6 +178,7 @@
 <!ENTITY Ctr_osearch_dm		"Flecha de despliegue pequeña">
 <!ENTITY Ctr_addonmanager	"Administrador de complementos">
 <!ENTITY Ctr_alt_addonsp	"Página 'más información': Apariencia alternativa">
+<!ENTITY Ctr_am_showrecup	"Always show 'Recent updates' category">
 <!ENTITY Ctr_alt_addonsm	"Apariencia alternativa">
 <!ENTITY Ctr_am_nowarning	"Ocultar advertencias en las listas de complementos">
 <!ENTITY Ctr_am_compact		"Vista compacta de las listas">
@@ -188,6 +192,7 @@
 <!ENTITY Ctr_hiderecentbm	"Menú emergente de Marcadores: Ocultar marcadores añadidos recientemente">
 <!ENTITY Ctr_hideeditbm		"Estrella de marcadores: Ocultar panel emergente (si la página no está en marcadores)">
 <!ENTITY Ctr_oldplacesbut	"Elementos y carpetas de Marcadores en la barra de herramientas: Apariencia antigua">
+<!ENTITY Ctr_dl_pm_drop		"Download buttons panel: show dropmarker">
 <!ENTITY Ctr_bmbutpanelm	"Estilo de panel para el menú emergente ">
 <!ENTITY Ctr_bmbunsortbm	"Mostrar submenú 'Marcadores no ordenados'">
 <!ENTITY Ctr_bmbunsortbm2	"Menú por encima de los marcadores">
@@ -237,6 +242,7 @@
 <!ENTITY Ctr_italic			"Cursiva">
 <!ENTITY Ctr_underlined		"Subrayadas">
 <!ENTITY Ctr_notabhov		"Las configuraciones habilitadas se imponen a las de pestaña 'señalada'">
+<!ENTITY Ctr_tablowopa		"Reduce tab visibility">
 <!ENTITY Ctr_tabc_act_tb	"Color de fondo en barras de herramientas">
 
 <!ENTITY Ctr_urlbar			"Barra de direcciones">
