--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -48,6 +48,7 @@
 <!ENTITY Ctr_tabwidthcla	"(classique)">
 <!ENTITY Ctr_tabminheight	"Hauteur :">
 <!ENTITY Ctr_tabheightinfo	"Des valeurs faibles causeront des erreurs dans le mode « Agrandi » !">
+<!ENTITY Ctr_ctrltabprev	"Preview tabs using 'Ctrl + Tab'">
 <!ENTITY Ctr_tabmaxwidth	"Largeur maximale :">
 <!ENTITY Ctr_tabminwidth	"Largeur minimale :">
 <!ENTITY Ctr_tabwidthinfo	"La largeur des onglets est contrôlée par Tab Mix Plus.">
@@ -149,7 +150,9 @@
 <!ENTITY Ctr_navlargeicons	"Grandes icônes">
 <!ENTITY Ctr_nbisizedelay0	"">
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 s) de retard d'initialisation, au démarrage du navigateur">
-<!ENTITY Ctr_findbar		"Position de la barre de recherche :">
+<!ENTITY Ctr_findbar		"Findbar">
+<!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
+<!ENTITY Ctr_findbarpos		"Position de la barre de recherche :">
 <!ENTITY Ctr_findbar_def	"En bas (par défaut)">
 <!ENTITY Ctr_findbar_top	"En haut">
 <!ENTITY Ctr_findbar_topa	"En haut (ordre alternatif du contenu)">
@@ -175,6 +178,7 @@
 <!ENTITY Ctr_osearch_dm		"Réduire la taille du bouton de liste déroulante">
 <!ENTITY Ctr_addonmanager	"Gestionnaire de modules">
 <!ENTITY Ctr_alt_addonsp	"Page « Plus » : ordre alternatif">
+<!ENTITY Ctr_am_showrecup	"Always show 'Recent updates' category">
 <!ENTITY Ctr_alt_addonsm	"Apparence alternative">
 <!ENTITY Ctr_am_nowarning	"Listes de modules : masquer les avertissements">
 <!ENTITY Ctr_am_compact		"Listes de modules : vue compacte">
@@ -188,6 +192,7 @@
 <!ENTITY Ctr_hiderecentbm	"Menu déroulant des marque-pages : masquer les marque-pages récemment ajoutés">
 <!ENTITY Ctr_hideeditbm		"Étoile des marque-pages : masquer le menu déroulant (si la page n'a pas été marquée)">
 <!ENTITY Ctr_oldplacesbut	"Éléments et dossiers de marque-pages sur une barre d'outil : ancienne apparence">
+<!ENTITY Ctr_dl_pm_drop		"Download buttons panel: show dropmarker">
 <!ENTITY Ctr_bmbutpanelm	"Menu déroulant : apparence de menu de type « panneau »">
 <!ENTITY Ctr_bmbunsortbm	"Menu déroulant : menu « Autres marque-pages »">
 <!ENTITY Ctr_bmbunsortbm2	"Menu au-dessus des marque-pages">
@@ -237,6 +242,7 @@
 <!ENTITY Ctr_italic			"Italique">
 <!ENTITY Ctr_underlined		"Souligné">
 <!ENTITY Ctr_notabhov		"Les paramètres activés supplantent les paramètres « Survolé »">
+<!ENTITY Ctr_tablowopa		"Reduce tab visibility">
 <!ENTITY Ctr_tabc_act_tb	"Couleur d'arrière-plan pour les barres d'outils">
 
 <!ENTITY Ctr_urlbar			"Barre d'adresse">
