--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -48,6 +48,7 @@
 <!ENTITY Ctr_tabwidthcla	"(クラシック)">
 <!ENTITY Ctr_tabminheight	"高さ:">
 <!ENTITY Ctr_tabheightinfo	"値を低くするとウィンドウの最大化時に不具合の原因となります！">
+<!ENTITY Ctr_ctrltabprev	"Preview tabs using 'Ctrl + Tab'">
 <!ENTITY Ctr_tabmaxwidth	"最大幅:">
 <!ENTITY Ctr_tabminwidth	"最小幅:">
 <!ENTITY Ctr_tabwidthinfo	"タブの最小幅と最大幅は Tab Mix Plus で制御されます。">
@@ -149,7 +150,9 @@
 <!ENTITY Ctr_navlargeicons	"大きなアイコン">
 <!ENTITY Ctr_nbisizedelay0	"ブラウザの起動時に初期化を遅延する">
 <!ENTITY Ctr_nbisizedelay	"㍉秒 (1 秒 ＝ 1000 ㍉秒)">
-<!ENTITY Ctr_findbar		"検索バー">
+<!ENTITY Ctr_findbar		"Findbar">
+<!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
+<!ENTITY Ctr_findbarpos		"検索バー">
 <!ENTITY Ctr_findbar_def	"デフォルト位置">
 <!ENTITY Ctr_findbar_top	"上に表示">
 <!ENTITY Ctr_findbar_topa	"上に表示 (別バージョン)">
@@ -175,6 +178,7 @@
 <!ENTITY Ctr_osearch_dm		"小さなドロップマーカー">
 <!ENTITY Ctr_addonmanager	"アドオンマネージャ">
 <!ENTITY Ctr_alt_addonsp	"詳細情報: 順序を変える">
+<!ENTITY Ctr_am_showrecup	"Always show 'Recent updates' category">
 <!ENTITY Ctr_alt_addonsm	"替わりの外観で置き換える">
 <!ENTITY Ctr_am_nowarning	"アドオンリスト: 警告を隠す">
 <!ENTITY Ctr_am_compact		"アドオンリスト: コンパクトビュー">
@@ -188,6 +192,7 @@
 <!ENTITY Ctr_hiderecentbm	"ブックマークポップアップ: 「最近ブックマークしたページ」を隠す">
 <!ENTITY Ctr_hideeditbm		"ブックマークスター: ポップアップを隠す (ページがブックマークされていない場合)">
 <!ENTITY Ctr_oldplacesbut	"ツールバー上のブックマーク: 古い外観で置き換える">
+<!ENTITY Ctr_dl_pm_drop		"Download buttons panel: show dropmarker">
 <!ENTITY Ctr_bmbutpanelm	"ポップアップ: パネルメニューで表示する">
 <!ENTITY Ctr_bmbunsortbm	"ポップアップ: 未整理のブックマークをメニューとして表示">
 <!ENTITY Ctr_bmbunsortbm2	"メニュー上部に表示">
@@ -237,6 +242,7 @@
 <!ENTITY Ctr_italic			"斜体">
 <!ENTITY Ctr_underlined		"下線">
 <!ENTITY Ctr_notabhov		"hover の設定を上書きする">
+<!ENTITY Ctr_tablowopa		"Reduce tab visibility">
 <!ENTITY Ctr_tabc_act_tb	"ツールバーに背景色をつける">
 
 <!ENTITY Ctr_urlbar			"ロケーションバー">
