--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -48,6 +48,7 @@
 <!ENTITY Ctr_tabwidthcla	"(clássica)">
 <!ENTITY Ctr_tabminheight	"Altura:">
 <!ENTITY Ctr_tabheightinfo	"Baixos valores causarão falhas no modo maximizado!">
+<!ENTITY Ctr_ctrltabprev	"Preview tabs using 'Ctrl + Tab'">
 <!ENTITY Ctr_tabmaxwidth	"Largura máxima:">
 <!ENTITY Ctr_tabminwidth	"Largura mínima:">
 <!ENTITY Ctr_tabwidthinfo	"Larguras mínimas e máximas são controladas pelo 'TabMixPlus'">
@@ -149,7 +150,9 @@
 <!ENTITY Ctr_navlargeicons	"Ícones grandes">
 <!ENTITY Ctr_nbisizedelay0	"Atraso (em msegs.) na execução">
 <!ENTITY Ctr_nbisizedelay	"msegs. (1000 msegs. = 1 seg.)">
-<!ENTITY Ctr_findbar		"Barra de pesquisas">
+<!ENTITY Ctr_findbar		"Findbar">
+<!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
+<!ENTITY Ctr_findbarpos		"Barra de pesquisas">
 <!ENTITY Ctr_findbar_def	"Posição padrão">
 <!ENTITY Ctr_findbar_top	"Posição no topo">
 <!ENTITY Ctr_findbar_topa	"Posição no topo - alternativa">
@@ -175,6 +178,7 @@
 <!ENTITY Ctr_osearch_dm		"Marcador pequeno">
 <!ENTITY Ctr_addonmanager	"Gerenciador de complementos">
 <!ENTITY Ctr_alt_addonsp	"Página 'Mais informações': ordem alternativa">
+<!ENTITY Ctr_am_showrecup	"Always show 'Recent updates' category">
 <!ENTITY Ctr_alt_addonsm	"Aparência alternativa">
 <!ENTITY Ctr_am_nowarning	"Lista de complementos: ocultar avisos">
 <!ENTITY Ctr_am_compact		"Lista de complementos: visualização compacta">
@@ -188,6 +192,7 @@
 <!ENTITY Ctr_hiderecentbm	"Popup de favoritos: ocultar favoritos adicionados recentemente">
 <!ENTITY Ctr_hideeditbm		"Estrela de favoritos: ocultar popup (se a página não está nos favoritos)">
 <!ENTITY Ctr_oldplacesbut	"Itens e pastas de favoritos na barra de ferramentas: aparência antiga">
+<!ENTITY Ctr_dl_pm_drop		"Download buttons panel: show dropmarker">
 <!ENTITY Ctr_bmbutpanelm	"Popup: aparência do menu do painel">
 <!ENTITY Ctr_bmbunsortbm	"Popup: menu 'outros favoritos'">
 <!ENTITY Ctr_bmbunsortbm2	"Menu acima dos favoritos">
@@ -237,6 +242,7 @@
 <!ENTITY Ctr_italic			"Itálico">
 <!ENTITY Ctr_underlined		"Sublinhado">
 <!ENTITY Ctr_notabhov		"As configurações habilitadas substituirão as configurações 'flutuantes'">
+<!ENTITY Ctr_tablowopa		"Reduce tab visibility">
 <!ENTITY Ctr_tabc_act_tb	"Cor de fundo nas barras de ferramentas">
 
 <!ENTITY Ctr_urlbar			"Barra de URLs">
