--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -48,6 +48,7 @@
 <!ENTITY Ctr_tabwidthcla	"(классич.)">
 <!ENTITY Ctr_tabminheight	"Высота:">
 <!ENTITY Ctr_tabheightinfo	"Низкое значение вызовет сбои в развёрнутом режиме!">
+<!ENTITY Ctr_ctrltabprev	"Preview tabs using 'Ctrl + Tab'">
 <!ENTITY Ctr_tabmaxwidth	"Макс. ширина:">
 <!ENTITY Ctr_tabminwidth	"Мин. ширина:">
 <!ENTITY Ctr_tabwidthinfo	"Минимальная и максимальная ширина вкладок изменяется расширением 'TabMixPlus'">
@@ -149,7 +150,9 @@
 <!ENTITY Ctr_navlargeicons	"Большие значки">
 <!ENTITY Ctr_nbisizedelay0	"Задержка выполнения">
 <!ENTITY Ctr_nbisizedelay	"мс (1000 мс = 1 сек)">
-<!ENTITY Ctr_findbar		"Панель поиска">
+<!ENTITY Ctr_findbar		"Findbar">
+<!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
+<!ENTITY Ctr_findbarpos		"Панель поиска">
 <!ENTITY Ctr_findbar_def	"Положение по умолчанию">
 <!ENTITY Ctr_findbar_top	"вверху">
 <!ENTITY Ctr_findbar_topa	"вверху (по-другому)">
@@ -175,6 +178,7 @@
 <!ENTITY Ctr_osearch_dm		"Маленький дропмаркер">
 <!ENTITY Ctr_addonmanager	"Управление дополнениями">
 <!ENTITY Ctr_alt_addonsp	"Страница дополнений «Подробнее»: альтернативный вид">
+<!ENTITY Ctr_am_showrecup	"Always show 'Recent updates' category">
 <!ENTITY Ctr_alt_addonsm	"Управление дополнениями: альтернативный вид">
 <!ENTITY Ctr_am_nowarning	"Список дополнений: скрыть предупреждения">
 <!ENTITY Ctr_am_compact		"Список дополнений: компактный вид">
@@ -188,6 +192,7 @@
 <!ENTITY Ctr_hiderecentbm	"Всплывающее меню: скрыть недавно добавленные закладки">
 <!ENTITY Ctr_hideeditbm		"Звездочка закладок: скрыть всплывающее окно (если страница не в закладках)">
 <!ENTITY Ctr_oldplacesbut	"Bookmark items and folders on toolbar: old appearance">
+<!ENTITY Ctr_dl_pm_drop		"Download buttons panel: show dropmarker">
 <!ENTITY Ctr_bmbutpanelm	"Всплывающее меню: вид панели меню">
 <!ENTITY Ctr_bmbunsortbm	"Всплывающее меню: подменю «Неподшитые закладки»">
 <!ENTITY Ctr_bmbunsortbm2	"Меню над закладками">
@@ -237,6 +242,7 @@
 <!ENTITY Ctr_italic			"Курсив">
 <!ENTITY Ctr_underlined		"Подчёркнутый">
 <!ENTITY Ctr_notabhov		"Включение настройки не учитывает параметры «в ожидании»">
+<!ENTITY Ctr_tablowopa		"Reduce tab visibility">
 <!ENTITY Ctr_tabc_act_tb	"Цвет фона панели инструментов">
 
 <!ENTITY Ctr_urlbar			"Адресная строка">
