--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -48,6 +48,7 @@
 <!ENTITY Ctr_tabwidthcla	"(經典傳統)">
 <!ENTITY Ctr_tabminheight	"高度:">
 <!ENTITY Ctr_tabheightinfo	"在視窗最大化模式下，過小的值可能導致故障!">
+<!ENTITY Ctr_ctrltabprev	"Preview tabs using 'Ctrl + Tab'">
 <!ENTITY Ctr_tabmaxwidth	"最大寬度:">
 <!ENTITY Ctr_tabminwidth	"最小寬度:">
 <!ENTITY Ctr_tabwidthinfo	"分頁的最小和最大寬度由 Tab Mix Plus 控制">
@@ -149,7 +150,9 @@
 <!ENTITY Ctr_navlargeicons	"大圖示">
 <!ENTITY Ctr_nbisizedelay0	"瀏覽器啟動後的初始化延遲">
 <!ENTITY Ctr_nbisizedelay	"毫秒 (1000 毫秒 = 1 秒)">
-<!ENTITY Ctr_findbar		"尋找列位於">
+<!ENTITY Ctr_findbar		"Findbar">
+<!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
+<!ENTITY Ctr_findbarpos		"尋找列位於">
 <!ENTITY Ctr_findbar_def	"預設位置">
 <!ENTITY Ctr_findbar_top	"頂部">
 <!ENTITY Ctr_findbar_topa	"頂部 (非預設風格)">
@@ -175,6 +178,7 @@
 <!ENTITY Ctr_osearch_dm		"Small dropmarker">
 <!ENTITY Ctr_addonmanager	"附加元件管理員">
 <!ENTITY Ctr_alt_addonsp	"「更多資訊」頁面: 換個項目順序">
+<!ENTITY Ctr_am_showrecup	"Always show 'Recent updates' category">
 <!ENTITY Ctr_alt_addonsm	"換個外觀">
 <!ENTITY Ctr_am_nowarning	"附加元件清單: 隱藏警告">
 <!ENTITY Ctr_am_compact		"附加元件清單: 緊湊風格">
@@ -188,6 +192,7 @@
 <!ENTITY Ctr_hiderecentbm	"Bookmarks popup: hide recently added bookmarks">
 <!ENTITY Ctr_hideeditbm		"Bookmarks star: hide popup (if page is not bookmarked)">
 <!ENTITY Ctr_oldplacesbut	"Bookmark items and folders on toolbar: old appearance">
+<!ENTITY Ctr_dl_pm_drop		"Download buttons panel: show dropmarker">
 <!ENTITY Ctr_bmbutpanelm	"彈出式書籤選單: 書籤選單使用和面板選單同風格的外觀">
 <!ENTITY Ctr_bmbunsortbm	"彈出式書籤選單: 「未排序書籤」項目附加子選單">
 <!ENTITY Ctr_bmbunsortbm2	"Menu above bookmarks">
@@ -237,6 +242,7 @@
 <!ENTITY Ctr_italic			"斜體">
 <!ENTITY Ctr_underlined		"Underlined">
 <!ENTITY Ctr_notabhov		"優先權高於「分頁(懸停)」的設定">
+<!ENTITY Ctr_tablowopa		"Reduce tab visibility">
 <!ENTITY Ctr_tabc_act_tb	"將目前分頁的背景顏色套用到工具列上">
 
 <!ENTITY Ctr_urlbar			"網址列">
