--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -48,6 +48,7 @@
 <!ENTITY Ctr_tabwidthcla	"(klassisk)">
 <!ENTITY Ctr_tabminheight	"Højde:">
 <!ENTITY Ctr_tabheightinfo	"Lave højdeværdier giver fejl i maksimeret tilstand!">
+<!ENTITY Ctr_ctrltabprev	"Preview tabs using 'Ctrl + Tab'">
 <!ENTITY Ctr_tabmaxwidth	"Maks. bredde:">
 <!ENTITY Ctr_tabminwidth	"Min. bredde:">
 <!ENTITY Ctr_tabwidthinfo	"Bredden på faneblade styres af TabMixPlus">
@@ -149,7 +150,9 @@
 <!ENTITY Ctr_navlargeicons	"Store ikoner">
 <!ENTITY Ctr_nbisizedelay0	"Indledende forsinkelse ved browseropstart">
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sekund)">
-<!ENTITY Ctr_findbar		"Placering af søgelinje">
+<!ENTITY Ctr_findbar		"Findbar">
+<!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
+<!ENTITY Ctr_findbarpos		"Placering af søgelinje">
 <!ENTITY Ctr_findbar_def	"Bunden (standard)">
 <!ENTITY Ctr_findbar_top	"Toppen">
 <!ENTITY Ctr_findbar_topa	"Toppen (alternativ rækkefølge på indhold)">
@@ -175,6 +178,7 @@
 <!ENTITY Ctr_osearch_dm		"Lille rullepil">
 <!ENTITY Ctr_addonmanager	"Tilføjelseshåndtering">
 <!ENTITY Ctr_alt_addonsp	"'Mere info'-side: alternativ rækkefølge">
+<!ENTITY Ctr_am_showrecup	"Always show 'Recent updates' category">
 <!ENTITY Ctr_alt_addonsm	"Alternativt udseende">
 <!ENTITY Ctr_am_nowarning	"Tilføjelseslister: skjul advarsler">
 <!ENTITY Ctr_am_compact		"Tilføjelseslister: kompakt visning">
@@ -188,6 +192,7 @@
 <!ENTITY Ctr_hiderecentbm	"Bogmærkers popup: skjul senest tilførte bogmærker">
 <!ENTITY Ctr_hideeditbm		"Bogmærkers stjerne: skjul popup (hvis side ikke er bogmærket)">
 <!ENTITY Ctr_oldplacesbut	"Bookmark items and folders on toolbar: old appearance">
+<!ENTITY Ctr_dl_pm_drop		"Download buttons panel: show dropmarker">
 <!ENTITY Ctr_bmbutpanelm	"Popup: panelmenu udseende">
 <!ENTITY Ctr_bmbunsortbm	"Popup: 'Usorterede bogmærker'-undermenu">
 <!ENTITY Ctr_bmbunsortbm2	"Menu over bogmærker">
@@ -237,6 +242,7 @@
 <!ENTITY Ctr_italic			"Kursiv">
 <!ENTITY Ctr_underlined		"Underlined">
 <!ENTITY Ctr_notabhov		"Aktiveret indstillinger overstyrer 'Der peges på'-indstillinger">
+<!ENTITY Ctr_tablowopa		"Reduce tab visibility">
 <!ENTITY Ctr_tabc_act_tb	"Baggrundsfarve på værktøjslinjer">
 
 <!ENTITY Ctr_urlbar			"Adresselinje">
