--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -48,6 +48,7 @@
 <!ENTITY Ctr_tabwidthcla	"(klasiski)">
 <!ENTITY Ctr_tabminheight	"Wusokosć:">
 <!ENTITY Ctr_tabheightinfo	"Niske gódnoty zawinuju zwobraznjeńske zmólki w maksiměrowanem naglěźe!">
+<!ENTITY Ctr_ctrltabprev	"Preview tabs using 'Ctrl + Tab'">
 <!ENTITY Ctr_tabmaxwidth	"Maksimalna šyrokosć:">
 <!ENTITY Ctr_tabminwidth	"Minimalna šyrokosć:">
 <!ENTITY Ctr_tabwidthinfo	"Maksimalna a minimalna šyrokosć wótwisujotej wót TabMixPlus">
@@ -149,7 +150,9 @@
 <!ENTITY Ctr_navlargeicons	"Wjelike symbole">
 <!ENTITY Ctr_nbisizedelay0	"Wuwjeźeńske wokomuźenje">
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sekunda)">
-<!ENTITY Ctr_findbar		"Pytańska rědka">
+<!ENTITY Ctr_findbar		"Findbar">
+<!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
+<!ENTITY Ctr_findbarpos		"Pytańska rědka">
 <!ENTITY Ctr_findbar_def	"Standardna pozicija">
 <!ENTITY Ctr_findbar_top	"Górjejce">
 <!ENTITY Ctr_findbar_topa	"Górjejce (alternatiwny)">
@@ -175,6 +178,7 @@
 <!ENTITY Ctr_osearch_dm		"Mały wuběrański tłocašk">
 <!ENTITY Ctr_addonmanager	"Zastojnik dodankow">
 <!ENTITY Ctr_alt_addonsp	"'Bok Dalšne info': Alternatiwny pórěd">
+<!ENTITY Ctr_am_showrecup	"Always show 'Recent updates' category">
 <!ENTITY Ctr_alt_addonsm	"Alternatiwny naglěd">
 <!ENTITY Ctr_am_nowarning	"Lisćiny dodankow: Warnowanja schowaś">
 <!ENTITY Ctr_am_compact		"Lisćiny dodankow: Kompaktny naglěd">
@@ -188,6 +192,7 @@
 <!ENTITY Ctr_hiderecentbm	"Wuskokujuce wokno cytańskich znamjenjow: Njedawno pśidany cytańske znamjenja schowaś">
 <!ENTITY Ctr_hideeditbm		"Gwězdku cytańskich znamjenjow: Wuskokujuce wokno schowaś (jolic bok njejo ako cytańske znamje skłaźony)">
 <!ENTITY Ctr_oldplacesbut	"Zapiski a zarědniki na symbolowej rědce: stary naglěd">
+<!ENTITY Ctr_dl_pm_drop		"Download buttons panel: show dropmarker">
 <!ENTITY Ctr_bmbutpanelm	"Wuskokujucy meni: Naglěd menijowego wuskokujucego wokna">
 <!ENTITY Ctr_bmbunsortbm	"Wuskokujucy meni: Meni 'Druge cytańske znamjenja'">
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad cytańskimi znamjenjami">
@@ -237,6 +242,7 @@
 <!ENTITY Ctr_italic			"Kursiwny">
 <!ENTITY Ctr_underlined		"Pódšmarnjony">
 <!ENTITY Ctr_notabhov		"Zmóžnjone nastajenja pśepisuju 'hover-nastajenja">
+<!ENTITY Ctr_tablowopa		"Reduce tab visibility">
 <!ENTITY Ctr_tabc_act_tb	"Slězynowa barwa na symbolowych rědkach">
 
 <!ENTITY Ctr_urlbar			"Adresowe pólo">
