--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -48,6 +48,7 @@
 <!ENTITY Ctr_tabwidthcla	"(klassikaline)">
 <!ENTITY Ctr_tabminheight	"Kõrgus:">
 <!ENTITY Ctr_tabheightinfo	"Madalad kõrguse väärtused põhjustavad maksimeeritud režiimis vigu!">
+<!ENTITY Ctr_ctrltabprev	"Preview tabs using 'Ctrl + Tab'">
 <!ENTITY Ctr_tabmaxwidth	"Suurim laius:">
 <!ENTITY Ctr_tabminwidth	"Vähim laius:">
 <!ENTITY Ctr_tabwidthinfo	"Kaartide laiust kontrollib TabMixPlus">
@@ -149,7 +150,9 @@
 <!ENTITY Ctr_navlargeicons	"Suured ikoonid">
 <!ENTITY Ctr_nbisizedelay0	"Täitmise viivitus brauseri käivitumisel">
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sekund)">
-<!ENTITY Ctr_findbar		"Otsinguriba asukoht">
+<!ENTITY Ctr_findbar		"Findbar">
+<!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
+<!ENTITY Ctr_findbarpos		"Otsinguriba asukoht">
 <!ENTITY Ctr_findbar_def	"All (vaikimisi)">
 <!ENTITY Ctr_findbar_top	"Üleval">
 <!ENTITY Ctr_findbar_topa	"Üleval (alternatiivne sisu järjekord)">
@@ -175,6 +178,7 @@
 <!ENTITY Ctr_osearch_dm		"Väike rippmenüü avamise nupp">
 <!ENTITY Ctr_addonmanager	"Lisade haldur">
 <!ENTITY Ctr_alt_addonsp	"'Rohkem teavet' leht: alternatiivne järjestus">
+<!ENTITY Ctr_am_showrecup	"Always show 'Recent updates' category">
 <!ENTITY Ctr_alt_addonsm	"Alternatiivne välimus">
 <!ENTITY Ctr_am_nowarning	"Laienduste loendid: peida hoiatused">
 <!ENTITY Ctr_am_compact		"Laienduste loendid: kompaktne vaade">
@@ -188,6 +192,7 @@
 <!ENTITY Ctr_hiderecentbm	"Järjehoidjate hüpik: peida viimati lisatud järjehoidjad">
 <!ENTITY Ctr_hideeditbm		"Järjehoidjate täht: peida hüpik (kui leht pole järjehoidjates)">
 <!ENTITY Ctr_oldplacesbut	"Järjehoidjate kirjed ja kaustad tööriistaribal: vana välimus">
+<!ENTITY Ctr_dl_pm_drop		"Download buttons panel: show dropmarker">
 <!ENTITY Ctr_bmbutpanelm	"Menüühüpik: paneelimenüü välimus">
 <!ENTITY Ctr_bmbunsortbm	"Menüühüpik: alammenüü 'Muud järjehoidjad'">
 <!ENTITY Ctr_bmbunsortbm2	"Menüü järjehoidjate kohal">
@@ -237,6 +242,7 @@
 <!ENTITY Ctr_italic			"Kaldkiri">
 <!ENTITY Ctr_underlined		"Allajoonitud">
 <!ENTITY Ctr_notabhov		"Valitud sätted tühistavad 'osutatud' sätted">
+<!ENTITY Ctr_tablowopa		"Reduce tab visibility">
 <!ENTITY Ctr_tabc_act_tb	"Tööriistaribade taustavärv">
 
 <!ENTITY Ctr_urlbar			"Aadressiriba">
