--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -48,6 +48,7 @@
 <!ENTITY Ctr_tabwidthcla	"(klasiski)">
 <!ENTITY Ctr_tabminheight	"Wysokosć:">
 <!ENTITY Ctr_tabheightinfo	"Niske hódnoty zwobraznjenske zmylki w maksiměrowanym napohledźe zawinuja!">
+<!ENTITY Ctr_ctrltabprev	"Preview tabs using 'Ctrl + Tab'">
 <!ENTITY Ctr_tabmaxwidth	"Maksimalna šěrokosć:">
 <!ENTITY Ctr_tabminwidth	"Minimalna šěrokosć:">
 <!ENTITY Ctr_tabwidthinfo	"Minimalna a maksimalna šěrokosć rajtarkow so přez TabMixPlus kontrolujetej">
@@ -149,7 +150,9 @@
 <!ENTITY Ctr_navlargeicons	"Wulke symbole">
 <!ENTITY Ctr_nbisizedelay0	"Komdźenje wuwjedźenja w ms">
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sekunda)">
-<!ENTITY Ctr_findbar		"Pytanska lajsta">
+<!ENTITY Ctr_findbar		"Findbar">
+<!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
+<!ENTITY Ctr_findbarpos		"Pytanska lajsta">
 <!ENTITY Ctr_findbar_def	"Standardna pozicija">
 <!ENTITY Ctr_findbar_top	"Horjeka">
 <!ENTITY Ctr_findbar_topa	"Horjeka (alternatiwny)">
@@ -175,6 +178,7 @@
 <!ENTITY Ctr_osearch_dm		"Małe wuběranske tłóčatko">
 <!ENTITY Ctr_addonmanager	"Zrjadowak přidatkow">
 <!ENTITY Ctr_alt_addonsp	"Strona 'wjace info': Alternatiwny porjad">
+<!ENTITY Ctr_am_showrecup	"Always show 'Recent updates' category">
 <!ENTITY Ctr_alt_addonsm	"Alternatiwny napohlad">
 <!ENTITY Ctr_am_nowarning	"Lisćiny přidatkow: Warnowanja schować">
 <!ENTITY Ctr_am_compact		"Lisćiny přidatkow: Kompaktny napohlad">
@@ -188,6 +192,7 @@
 <!ENTITY Ctr_hiderecentbm	"Wuskakowace wokno zapołožkow: Njedawo přidate zapołožki schować">
 <!ENTITY Ctr_hideeditbm		"Hwěžka zapołožkow: Wuskakowace wokno schować (jeli strona jako zapołožka składowana njeje)">
 <!ENTITY Ctr_oldplacesbut	"Zapiski a rjadowaki zapołožkow na symbolowej lajsće: stary napohlad">
+<!ENTITY Ctr_dl_pm_drop		"Download buttons panel: show dropmarker">
 <!ENTITY Ctr_bmbutpanelm	"Wuskakowacy meni: Napohlad wuskakowaceho menija">
 <!ENTITY Ctr_bmbunsortbm	"Wuskakowacy meni: Meni Druhe zapołožki'">
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad zapołožkami">
@@ -237,6 +242,7 @@
 <!ENTITY Ctr_italic			"Kursiwny">
 <!ENTITY Ctr_underlined		"Podšmórnjeny">
 <!ENTITY Ctr_notabhov		"Zmóžnjene nastajenja přepisuja 'hover-nastajenja'">
+<!ENTITY Ctr_tablowopa		"Reduce tab visibility">
 <!ENTITY Ctr_tabc_act_tb	"Pozadkowa barba na symbolowych lajstach">
 
 <!ENTITY Ctr_urlbar			"Adresowe polo">
