--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -48,6 +48,7 @@
 <!ENTITY Ctr_tabwidthcla	"(stile classico)">
 <!ENTITY Ctr_tabminheight	"Altezza:">
 <!ENTITY Ctr_tabheightinfo	"Valori bassi provocheranno anomalie nella finestra ingrandita!">
+<!ENTITY Ctr_ctrltabprev	"Preview tabs using 'Ctrl + Tab'">
 <!ENTITY Ctr_tabmaxwidth	"Larghezza massima:">
 <!ENTITY Ctr_tabminwidth	"Larghezza minima:">
 <!ENTITY Ctr_tabwidthinfo	"La larghezza minima e massima delle schede è definita da TabMixPlus">
@@ -149,7 +150,9 @@
 <!ENTITY Ctr_navlargeicons	"Icone grandi">
 <!ENTITY Ctr_nbisizedelay0	"Ritardo esecuzione in ms">
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sec)">
-<!ENTITY Ctr_findbar		"Posizione della barra di ricerca nel testo">
+<!ENTITY Ctr_findbar		"Findbar">
+<!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
+<!ENTITY Ctr_findbarpos		"Posizione della barra di ricerca nel testo">
 <!ENTITY Ctr_findbar_def	"Posizione predefinita">
 <!ENTITY Ctr_findbar_top	"In alto">
 <!ENTITY Ctr_findbar_topa	"In alto (stile alternativo)">
@@ -175,6 +178,7 @@
 <!ENTITY Ctr_osearch_dm		"Freccia verso il basso piccola">
 <!ENTITY Ctr_addonmanager	"Gestione componenti aggiuntivi">
 <!ENTITY Ctr_alt_addonsp	"Pagina 'Altro' dei componenti aggiuntivi: aspetto alternativo">
+<!ENTITY Ctr_am_showrecup	"Always show 'Recent updates' category">
 <!ENTITY Ctr_alt_addonsm	"Gestione componenti aggiuntivi: aspetto alternativo">
 <!ENTITY Ctr_am_nowarning	"Informazioni sui componenti: nascondi avvisi">
 <!ENTITY Ctr_am_compact		"Informazioni sui componenti: visualizzazione compatta">
@@ -188,6 +192,7 @@
 <!ENTITY Ctr_hiderecentbm	"Popup segnalibri: nascondi i segnalibri aggiunti di recente">
 <!ENTITY Ctr_hideeditbm		"Stella dei segnalibri: nascondi popup (se la pagina non è nei segnalibri)">
 <!ENTITY Ctr_oldplacesbut	"Bookmark items and folders on toolbar: old appearance">
+<!ENTITY Ctr_dl_pm_drop		"Download buttons panel: show dropmarker">
 <!ENTITY Ctr_bmbutpanelm	"Aspetto del menu a pannello">
 <!ENTITY Ctr_bmbunsortbm	"Menu dei 'Segnalibri non catalogati'">
 <!ENTITY Ctr_bmbunsortbm2	"Menu above bookmarks">
@@ -237,6 +242,7 @@
 <!ENTITY Ctr_italic			"Corsivo">
 <!ENTITY Ctr_underlined		"Sottolineato">
 <!ENTITY Ctr_notabhov		"Le impostazioni attivate prevalgono su quelle del passaggio del mouse">
+<!ENTITY Ctr_tablowopa		"Reduce tab visibility">
 <!ENTITY Ctr_tabc_act_tb	"Colore di sfondo delle barre degli strumenti">
 
 <!ENTITY Ctr_urlbar			"Barra degli indirizzi">
