--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -178,7 +178,7 @@
 <!ENTITY Ctr_osearch_dm		"Majhna spustna puščica">
 <!ENTITY Ctr_addonmanager	"Upravitelj dodatkov">
 <!ENTITY Ctr_alt_addonsp	"Stran dodatkov 'Več': nadomestni videz">
-<!ENTITY Ctr_am_showrecup	"Vedno prkaži kategorijo 'Nedavne posodobitve'">
+<!ENTITY Ctr_am_showrecup	"Vedno prikaži kategorijo 'Nedavne posodobitve'">
 <!ENTITY Ctr_alt_addonsm	"Nadomestni videz">
 <!ENTITY Ctr_am_nowarning	"Seznami dodatkov: skrij opozorila">
 <!ENTITY Ctr_am_compact		"Seznami dodatkov: strnjen pogled">
