--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -48,7 +48,7 @@
 <!ENTITY Ctr_tabwidthcla	"(经典)">
 <!ENTITY Ctr_tabminheight	"高度:">
 <!ENTITY Ctr_tabheightinfo	"较小的值在最大化模式下可能出现问题!">
-<!ENTITY Ctr_ctrltabprev	"Preview tabs using 'Ctrl + Tab'">
+<!ENTITY Ctr_ctrltabprev	"使用“Ctrl + Tab”预览标签页">
 <!ENTITY Ctr_tabmaxwidth	"最大宽度:">
 <!ENTITY Ctr_tabminwidth	"最小宽度:">
 <!ENTITY Ctr_tabwidthinfo	"标签页的最小宽度和最大宽度由 TabMixPlus 所控制">
@@ -126,7 +126,7 @@
 <!ENTITY Ctr_altoptionswh	"高度">
 <!ENTITY Ctr_altoptionsi	"模拟的选项窗口再也不是一个对话框，而是一个隐藏所有工具栏的“浏览器窗口”。“使用当前页面”功能仅添加在已在当前窗口打开的页面地址，在这种情况下只是“about:preferences”选项。 “选项”工具栏图标被替换为新的，以便于在窗口中打开选项。">
 <!ENTITY Ctr_options_rem	"记住最后选中的分类">
-<!ENTITY Ctr_aboutpages		"General 'about:' pages: alternative appearance">
+<!ENTITY Ctr_aboutpages		"常规“about:”页面使用备选外观">
 <!ENTITY Ctr_svgfilters		"默认工具栏图标使用的SVG颜色">
 <!ENTITY Ctr_wincontrols	"全屏窗口控制按钮可以移动">
 <!ENTITY Ctr_puibuttonsep	"菜单按钮分隔符">
@@ -150,8 +150,8 @@
 <!ENTITY Ctr_navlargeicons	"大图标">
 <!ENTITY Ctr_nbisizedelay0	"执行时延迟的毫秒数">
 <!ENTITY Ctr_nbisizedelay	"毫秒 (1000 毫秒 = 1 秒)">
-<!ENTITY Ctr_findbar		"Findbar">
-<!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
+<!ENTITY Ctr_findbar		"查找栏">
+<!ENTITY Ctr_findbar_hws	"滚动页面时关闭查找栏">
 <!ENTITY Ctr_findbarpos		"查找栏位置">
 <!ENTITY Ctr_findbar_def	"底部(默认)">
 <!ENTITY Ctr_findbar_top	"顶部">
@@ -178,7 +178,7 @@
 <!ENTITY Ctr_osearch_dm		"较小的下拉按钮">
 <!ENTITY Ctr_addonmanager	"附加组件管理器">
 <!ENTITY Ctr_alt_addonsp	"附加组件“更多”页面: 备选的外观">
-<!ENTITY Ctr_am_showrecup	"Always show 'Recent updates' category">
+<!ENTITY Ctr_am_showrecup	"总是显示“最近更新”栏目">
 <!ENTITY Ctr_alt_addonsm	"附加组件管理器: 备选的外观">
 <!ENTITY Ctr_am_nowarning	"附加组件管理器列表: 隐藏警告">
 <!ENTITY Ctr_am_compact		"附加组件列表: 紧凑视图">
@@ -191,8 +191,8 @@
 <!ENTITY Ctr_bmbutton		"书签菜单按钮">
 <!ENTITY Ctr_hiderecentbm	"书签弹出菜单: 隐藏最近添加的书签">
 <!ENTITY Ctr_hideeditbm		"书签星星图标: 隐藏弹出菜单(如果页面未添加到书签)">
-<!ENTITY Ctr_oldplacesbut	"Bookmark items and folders on toolbar: old appearance">
-<!ENTITY Ctr_dl_pm_drop		"Download buttons panel: show dropmarker">
+<!ENTITY Ctr_oldplacesbut	"工具栏中的书签项目与文件夹: 旧式外观">
+<!ENTITY Ctr_dl_pm_drop		"下载按钮面板: 显示下拉按钮">
 <!ENTITY Ctr_bmbutpanelm	"弹出式菜单: 面板式菜单外观">
 <!ENTITY Ctr_bmbunsortbm	"弹出式菜单: “未分类书签”子菜单">
 <!ENTITY Ctr_bmbunsortbm2	"菜单在书签之上">
@@ -218,7 +218,7 @@
 <!ENTITY Ctr_navthrobber2	"添加网址或放空">
 <!ENTITY Ctr_anewtaburl		"新标签页地址">
 <!ENTITY Ctr_anewtaburlcb	"自定义新标签页地址 (默认: 'about:newtab')">
-<!ENTITY Ctr_anewtaburlpcb	"Custom private new tab page url (default: 'about:privatebrowsing')">
+<!ENTITY Ctr_anewtaburlpcb	"自定义新隐私标签页地址(默认: 'about:privatebrowsing')">
 
 <!ENTITY Ctr_tab_tf_info1	"可支持颜色名称, hex值, rgb(a) 以及 hsl(a) 值。">
 <!ENTITY Ctr_tab_tf_info2	"输入值不会进行校验！">
@@ -242,7 +242,7 @@
 <!ENTITY Ctr_italic			"斜体">
 <!ENTITY Ctr_underlined		"下载线">
 <!ENTITY Ctr_notabhov		"启用设置覆盖“悬停”设置">
-<!ENTITY Ctr_tablowopa		"Reduce tab visibility">
+<!ENTITY Ctr_tablowopa		"降低标签页能见度">
 <!ENTITY Ctr_tabc_act_tb	"工具栏使用背景色">
 
 <!ENTITY Ctr_urlbar			"地址栏">
@@ -256,7 +256,7 @@
 <!ENTITY Ctr_urlbardropm	"尽可能移动下拉按钮到最后的位置">
 <!ENTITY Ctr_urlbardropm2	"下拉按钮总是可见">
 <!ENTITY Ctr_altreaderico	"备选的 “阅读模式” 图标">
-<!ENTITY Ctr_hideurlzoom	"Hide zoom button (if present)">
+<!ENTITY Ctr_hideurlzoom	"隐藏缩放按钮(如果存在)">
 <!ENTITY Ctr_hideprbutton	"当弹出窗口被阻止时隐藏通知图标">
 <!ENTITY Ctr_locsearchbw10	"减小地址栏与搜索栏高度(实验性)">
 <!ENTITY Ctr_urlbar_ib		"网站身份标识按钮 (身份标识框)">
@@ -284,7 +284,7 @@
 <!ENTITY Ctr_autocompl_sep	"在结果之间显示分隔符">
 <!ENTITY Ctr_urlbar_uc		"禁用 “统一自动完成” 功能">
 <!ENTITY Ctr_lbsugresi		"禁用高度限制">
-<!ENTITY Ctr_cresultshcb	"Custom height limit: ">
+<!ENTITY Ctr_cresultshcb	"自定义高度限制: ">
 <!ENTITY Ctr_lbsugres		"结果数量">
 <!ENTITY Ctr_lbsbradius		"自定义地址栏与搜索栏边框弧度">
 
@@ -379,8 +379,8 @@
 <!ENTITY Ctr_e_findbarhl	"搜索栏高亮">
 <!ENTITY Ctr_fx50findbarhl	"不选中此项以移除搜索栏“高亮”功能。">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oneoffsearch	"Autocomplete popups search selection">
-<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes search selection from location bars autocomplete popup.">
+<!ENTITY Ctr_e_oneoffsearch	"自动完成弹出搜索">
+<!ENTITY Ctr_fx51OOSeach	"不选中此项以从地址栏自动完成弹出框中移除搜索选择。">
 
 
 <!ENTITY Ctr_pw_settings	"设置">
@@ -407,7 +407,7 @@
 <!ENTITY goCmd.label					"转到">
 <!ENTITY Ctr_menu_restart.label			"重启">
 <!ENTITY Ctr_restartapp					"在应用菜单和文件菜单中显示 “重启”">
-<!ENTITY Ctr_ctrnewinv					"Underline new options for current &brandShortName; version">
+<!ENTITY Ctr_ctrnewinv					"为当前 &brandShortName; 版本的新选项添加下划线">
 
 <!ENTITY Ctr_openInCurrentTab			"在当前标签页打开输入">
 <!ENTITY Ctr_openInNewTab				"在新标签页打开输入">
