--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -48,7 +48,7 @@
 <!ENTITY Ctr_tabwidthcla	"(klasyczne)">
 <!ENTITY Ctr_tabminheight	"Wysokość:">
 <!ENTITY Ctr_tabheightinfo	"Niskie wartości spowodują usterki w trybie zmaksymalizowanym!">
-<!ENTITY Ctr_ctrltabprev	"Preview tabs using 'Ctrl + Tab'">
+<!ENTITY Ctr_ctrltabprev	"Podgląd kart za pomocą 'Ctrl + Tab'">
 <!ENTITY Ctr_tabmaxwidth	"Maksymalna szerokość:">
 <!ENTITY Ctr_tabminwidth	"Minimalna szerokość:">
 <!ENTITY Ctr_tabwidthinfo	"Szerokość karty jest kontrolowana przez TabMixPlus">
@@ -150,8 +150,8 @@
 <!ENTITY Ctr_navlargeicons	"Duże ikony">
 <!ENTITY Ctr_nbisizedelay0	"Opóźnienie inicjacji po uruchomieniu przeglądarki">
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 s)">
-<!ENTITY Ctr_findbar		"Findbar">
-<!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
+<!ENTITY Ctr_findbar		"Pasek wyszukiwania">
+<!ENTITY Ctr_findbar_hws	"Zamknij pasek wyszukiwania przy przewijaniu strony">
 <!ENTITY Ctr_findbarpos		"Pozycja paska wyszukiwania">
 <!ENTITY Ctr_findbar_def	"Dolna (domyślna)">
 <!ENTITY Ctr_findbar_top	"Górna">
@@ -178,7 +178,7 @@
 <!ENTITY Ctr_osearch_dm		"Mały przycisk podręczny">
 <!ENTITY Ctr_addonmanager	"Menedżer dodatków">
 <!ENTITY Ctr_alt_addonsp	"Strona 'więcej informacji': alternatywny porządek">
-<!ENTITY Ctr_am_showrecup	"Always show 'Recent updates' category">
+<!ENTITY Ctr_am_showrecup	"Zawsze pokazuj kategorię 'Ostatnie aktualizacje'">
 <!ENTITY Ctr_alt_addonsm	"Alternatywny wygląd">
 <!ENTITY Ctr_am_nowarning	"Listy dodatków: ukryj ostrzeżenia">
 <!ENTITY Ctr_am_compact		"Listy dodatków: widok kompaktowy">
@@ -192,7 +192,7 @@
 <!ENTITY Ctr_hiderecentbm	"Menu podręczne zakładek: ukryj ostatnio dodane zakładki">
 <!ENTITY Ctr_hideeditbm		"Gwiazdka zakładek: ukryj menu podręczne (jeżeli zakładka nie jest dodana do strony)">
 <!ENTITY Ctr_oldplacesbut	"Elementy i foldery zakładek na pasku: stary wygląd">
-<!ENTITY Ctr_dl_pm_drop		"Download buttons panel: show dropmarker">
+<!ENTITY Ctr_dl_pm_drop		"Panel przycisków pobierania: pokaż znacznik rozwinięcia">
 <!ENTITY Ctr_bmbutpanelm	"Menu podręczne: wygląd menu panelu">
 <!ENTITY Ctr_bmbunsortbm	"Menu podręczne: podmenu 'Pozostałe zakładki'">
 <!ENTITY Ctr_bmbunsortbm2	"Menu ponad zakładkami">
@@ -242,7 +242,7 @@
 <!ENTITY Ctr_italic			"Kursywa">
 <!ENTITY Ctr_underlined		"Podkreślenie">
 <!ENTITY Ctr_notabhov		"Włączone ustawienia nie uwzględniają ustawień 'najechania'">
-<!ENTITY Ctr_tablowopa		"Reduce tab visibility">
+<!ENTITY Ctr_tablowopa		"Zmniejsz widoczność karty">
 <!ENTITY Ctr_tabc_act_tb	"Kolor tła na paskach narzędzi">
 
 <!ENTITY Ctr_urlbar			"Pasek adresu">
