--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -43,12 +43,12 @@
 <!ENTITY Ctr_tabsontop3		"Вкладки не вверху (v2) --- [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"v2 только для некоторых дополнений и для полных тем!">
 <!ENTITY Ctr_tabsontopI1	"Добавляет атрибут [tabsontop=true/false] для">
-<!ENTITY Ctr_tabsintitlebar	"Заголовок &brandShortName;">
+<!ENTITY Ctr_tabsintitlebar	"Использовать заголовок &brandShortName; вместо заголовка ОС">
 <!ENTITY Ctr_tabwidthdef	"(по умолчанию)">
 <!ENTITY Ctr_tabwidthcla	"(классич.)">
 <!ENTITY Ctr_tabminheight	"Высота:">
 <!ENTITY Ctr_tabheightinfo	"Низкое значение вызовет сбои в развёрнутом режиме!">
-<!ENTITY Ctr_ctrltabprev	"Preview tabs using 'Ctrl + Tab'">
+<!ENTITY Ctr_ctrltabprev	"Использовать предпросмотр вкладок 'Ctrl + Tab'">
 <!ENTITY Ctr_tabmaxwidth	"Макс. ширина:">
 <!ENTITY Ctr_tabminwidth	"Мин. ширина:">
 <!ENTITY Ctr_tabwidthinfo	"Минимальная и максимальная ширина вкладок изменяется расширением 'TabMixPlus'">
@@ -126,7 +126,7 @@
 <!ENTITY Ctr_altoptionswh	"Высота">
 <!ENTITY Ctr_altoptionsi	"Окно настроек больше не является диалогом, теперь это «Окно браузера», в котором скрыты все панели инструментов. Опция «Использовать текущие страницы» добавляет только URL-адреса открытые в текущем окне, в данном случае 'about:preferences'. Кнопка «Настройки» на панели инструментов заменяется на новую, чтобы позволить открывать параметры в окне.">
 <!ENTITY Ctr_options_rem	"Запоминать последнюю выбранную категорию">
-<!ENTITY Ctr_aboutpages		"General 'about:' pages: alternative appearance">
+<!ENTITY Ctr_aboutpages		"Страница 'about:': альтернативный вид">
 <!ENTITY Ctr_svgfilters		"SVG цвета для стандартных значков панели инструментов">
 <!ENTITY Ctr_wincontrols	"Подвижное управление полноэкранным режимом">
 <!ENTITY Ctr_puibuttonsep	"Разделитель кнопки меню">
@@ -150,10 +150,10 @@
 <!ENTITY Ctr_navlargeicons	"Большие значки">
 <!ENTITY Ctr_nbisizedelay0	"Задержка выполнения">
 <!ENTITY Ctr_nbisizedelay	"мс (1000 мс = 1 сек)">
-<!ENTITY Ctr_findbar		"Findbar">
-<!ENTITY Ctr_findbar_hws	"Close findbar when scrolling page">
-<!ENTITY Ctr_findbarpos		"Панель поиска">
-<!ENTITY Ctr_findbar_def	"Положение по умолчанию">
+<!ENTITY Ctr_findbar		"Панель поиска">
+<!ENTITY Ctr_findbar_hws	"Закрывать панель поиска при прокрутке страницы">
+<!ENTITY Ctr_findbarpos		"Положение панели поиска">
+<!ENTITY Ctr_findbar_def	"внизу (по умолчанию)">
 <!ENTITY Ctr_findbar_top	"вверху">
 <!ENTITY Ctr_findbar_topa	"вверху (по-другому)">
 <!ENTITY Ctr_findbar_bota	"внизу (по-другому)">
@@ -178,7 +178,7 @@
 <!ENTITY Ctr_osearch_dm		"Маленький дропмаркер">
 <!ENTITY Ctr_addonmanager	"Управление дополнениями">
 <!ENTITY Ctr_alt_addonsp	"Страница дополнений «Подробнее»: альтернативный вид">
-<!ENTITY Ctr_am_showrecup	"Always show 'Recent updates' category">
+<!ENTITY Ctr_am_showrecup	"Всегда показывать категорию «Недавние обновления»">
 <!ENTITY Ctr_alt_addonsm	"Управление дополнениями: альтернативный вид">
 <!ENTITY Ctr_am_nowarning	"Список дополнений: скрыть предупреждения">
 <!ENTITY Ctr_am_compact		"Список дополнений: компактный вид">
@@ -191,8 +191,8 @@
 <!ENTITY Ctr_bmbutton		"Кнопка меню закладок">
 <!ENTITY Ctr_hiderecentbm	"Всплывающее меню: скрыть недавно добавленные закладки">
 <!ENTITY Ctr_hideeditbm		"Звездочка закладок: скрыть всплывающее окно (если страница не в закладках)">
-<!ENTITY Ctr_oldplacesbut	"Bookmark items and folders on toolbar: old appearance">
-<!ENTITY Ctr_dl_pm_drop		"Download buttons panel: show dropmarker">
+<!ENTITY Ctr_oldplacesbut	"Элементы и папки панели закладок: старый вид">
+<!ENTITY Ctr_dl_pm_drop		"Панель кнопки загрузок: показывать дропмаркер">
 <!ENTITY Ctr_bmbutpanelm	"Всплывающее меню: вид панели меню">
 <!ENTITY Ctr_bmbunsortbm	"Всплывающее меню: подменю «Неподшитые закладки»">
 <!ENTITY Ctr_bmbunsortbm2	"Меню над закладками">
@@ -218,7 +218,7 @@
 <!ENTITY Ctr_navthrobber2	"Добавьте адрес или оставьте пустым">
 <!ENTITY Ctr_anewtaburl		"Адрес страницы новой вкладки">
 <!ENTITY Ctr_anewtaburlcb	"Изменить адрес страницы новой вкладки (по умолчанию: 'about:newtab')">
-<!ENTITY Ctr_anewtaburlpcb	"Custom private new tab page url (default: 'about:privatebrowsing')">
+<!ENTITY Ctr_anewtaburlpcb	"Изменить адрес страницы приватного окна (по умолчанию: 'about:privatebrowsing')">
 
 <!ENTITY Ctr_tab_tf_info1	"Текстовые поля поддерживают названия цветов на английском, hex коды, rgb(a) и hsl(a) значения.">
 <!ENTITY Ctr_tab_tf_info2	"Введённое не будет проверяться!">
@@ -242,7 +242,7 @@
 <!ENTITY Ctr_italic			"Курсив">
 <!ENTITY Ctr_underlined		"Подчёркнутый">
 <!ENTITY Ctr_notabhov		"Включение настройки не учитывает параметры «в ожидании»">
-<!ENTITY Ctr_tablowopa		"Reduce tab visibility">
+<!ENTITY Ctr_tablowopa		"Уменьшить видимость вкладки">
 <!ENTITY Ctr_tabc_act_tb	"Цвет фона панели инструментов">
 
 <!ENTITY Ctr_urlbar			"Адресная строка">
@@ -256,7 +256,7 @@
 <!ENTITY Ctr_urlbardropm	"Переместить дропмаркер до последней возможной позиции">
 <!ENTITY Ctr_urlbardropm2	"Всегда показывать дропмаркер">
 <!ENTITY Ctr_altreaderico	"Альтернативный значок «Чтения»">
-<!ENTITY Ctr_hideurlzoom	"Hide zoom button (if present)">
+<!ENTITY Ctr_hideurlzoom	"Скрыть кнопки масштабирования (при наличии)">
 <!ENTITY Ctr_hideprbutton	"Скрыть значок уведомления, когда блокируется всплывающее окно">
 <!ENTITY Ctr_locsearchbw10	"Уменьшить высоту панелей адреса и поиска (экспериментально)">
 <!ENTITY Ctr_urlbar_ib		"Кнопка подлинности сайта">
@@ -275,16 +275,16 @@
 <!ENTITY Ctr_padlock_ext	"Значок '&brandShortName;' для допустимых 'about' страниц">
 <!ENTITY Ctr_icopageinfo	"Фавикон/глобус/«i»-значок: при нажатии открывает окно «Информация о странице»">
 <!ENTITY Ctr_lbsbsize		"Пользовательская ширина строки адреса и поиска">
-<!ENTITY Ctr_searchbar		"Панель поиска">
-<!ENTITY Ctr_autocomplete	"Автозаполнение">
+<!ENTITY Ctr_searchbar		"Строка поиска">
+<!ENTITY Ctr_autocomplete	"Автозавершение">
 <!ENTITY Ctr_altautocompl	"Альтернативный внешний вид">
 <!ENTITY Ctr_autocompl_it	"Удалить пункты «Искать в...» и «Посетить» (при наличии)">
 <!ENTITY Ctr_autocompl_hl	"Выделение текстовых результатов">
 <!ENTITY Ctr_autocompl_rhl	"«Aero» цвета выделения результатов">
 <!ENTITY Ctr_autocompl_sep	"Разделитель между результатами">
-<!ENTITY Ctr_urlbar_uc		"Отключить функцию «автозаполнение»">
+<!ENTITY Ctr_urlbar_uc		"Отключить функцию автозавершения">
 <!ENTITY Ctr_lbsugresi		"Отключить ограничение по высоте">
-<!ENTITY Ctr_cresultshcb	"Custom height limit: ">
+<!ENTITY Ctr_cresultshcb	"Ограничение высоты: ">
 <!ENTITY Ctr_lbsugres		"Количество результатов">
 <!ENTITY Ctr_lbsbradius		"Пользовательский радиус границы для строки адреса поиска">
 
@@ -306,11 +306,11 @@
 
 <!ENTITY Ctr_toolbars		"Панели">
 <!ENTITY Ctr_dblclnewtab	"Двойной клик открывает новую вкладку">
-<!ENTITY Ctr_dblclnewtabdes	"Not suitable for all complete themes while Windows titlebar is active.">
+<!ENTITY Ctr_dblclnewtabdes	"Не работает с полными темами, если активна строка заголовка.">
 <!ENTITY Ctr_hidetbwot		"Скрывать панель вкладок при одной вкладке">
 <!ENTITY Ctr_hidetbwote		"Уменьшить задержку скрытия при запуске">
 <!ENTITY Ctr_hidetbwote_i	"Может привести к неисправностям на панели вкладок">
-<!ENTITY Ctr_hidetbwote2	"Automatically adjust titlebar space">
+<!ENTITY Ctr_hidetbwote2	"Автоматически регулировать размер заголовка">
 <!ENTITY Ctr_notabfog		"Отключить затуманивание фона панели вкладок (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"Удалить цвет фона (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"Уменьшить пространство над панелью инструментов (если возможно)">
@@ -379,8 +379,8 @@
 <!ENTITY Ctr_e_findbarhl	"Подсветка панели поиска">
 <!ENTITY Ctr_fx50findbarhl	"Отключение параметра убирает функцию «подсветки» панели поиска.">
 <!ENTITY Ctr_e_flyweb		"FlyWeb">
-<!ENTITY Ctr_e_oneoffsearch	"Autocomplete popups search selection">
-<!ENTITY Ctr_fx51OOSeach	"Unchecking this preference removes search selection from location bars autocomplete popup.">
+<!ENTITY Ctr_e_oneoffsearch	"Выбор поисковой системы в меню автозавершения">
+<!ENTITY Ctr_fx51OOSeach	"Отключение параметра убирает выбор поисковой системы из меню автозавершения адресной строки.">
 
 
 <!ENTITY Ctr_pw_settings	"Настройки">
@@ -395,19 +395,19 @@
 <!ENTITY Ctr_special_font	"Настройки цвета фона — только для темы по умолчанию!">
 <!ENTITY Ctr_special_info	"Некоторые параметры могут предложить визуальные изменения только в определённых случаях!">
 <!ENTITY Ctr_special_info2	"Настройки сделаны для темы &brandShortName; по умолчанию и не могут работать со всеми сторонними темами!">
-<!ENTITY Ctr_special_acr	"Only report issues through official support channels and not by using 'Add-on Compatibility Reporter'!">
-<!ENTITY Ctr_support		"Support">
-<!ENTITY Ctr_support_forum1	"MozillaZine (English forum)">
-<!ENTITY Ctr_support_forum2	"Camp Firefox (German forum)">
-<!ENTITY Ctr_github_issues	"Report issue on Github">
-<!ENTITY Ctr_newversion		"Check for new version">
+<!ENTITY Ctr_special_acr	"Сообщайте о проблемах только через официальные каналы поддержки, не используйте 'Add-on Compatibility Reporter'!">
+<!ENTITY Ctr_support		"Поддержка">
+<!ENTITY Ctr_support_forum1	"MozillaZine (Английский форум)">
+<!ENTITY Ctr_support_forum2	"Camp Firefox (Немецкий форум)">
+<!ENTITY Ctr_github_issues	"Сообщить о проблеме на GitHub">
+<!ENTITY Ctr_newversion		"Проверить обновления">
 
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"Начало работы">
 <!ENTITY goCmd.label					"Перейти">
 <!ENTITY Ctr_menu_restart.label			"Перезапуск">
 <!ENTITY Ctr_restartapp					"«Перезапуск» в меню приложения/файл">
-<!ENTITY Ctr_ctrnewinv					"Underline new options for current &brandShortName; version">
+<!ENTITY Ctr_ctrnewinv					"Подчёркивать новые опции для текущей версии &brandShortName;">
 
 <!ENTITY Ctr_openInCurrentTab			"Открывать данные в текущей вкладке">
 <!ENTITY Ctr_openInNewTab				"Открывать данные в новой вкладке">
